assets/styles.css
h1, h2 {
  font-size: large;
  text-align: center;
}

form > div {
  margin-bottom: 10px;
}

input[type=text], input[type=url], input[type=search] {
  width: 100%;
  padding: 4px;
  /* prevent field from running off the end of the page (https://stackoverflow.com/a/46991460) */
  box-sizing: border-box;
}

button {
  padding: 4px;
}

.center-container {
  /* center on page */
  margin-left: auto;
  margin-right: auto;
  width: fit-content;
}
.nav-links {
  margin-top: 24px;
  display: flex;
  justify-content: space-around;
}
.maintenance > form {
  margin-top: 24px;
}
.ready-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
}
.home-link {
  margin-top: 18px;
  margin-bottom: 18px;
}

.error {
  color: red;
}

.list-entry {
  display: flex;
}
.list-entry.playlist {
  border-left: 8px double;
  padding-left: 4px;
}
.list-entry > .info {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  margin-left: 8px;
}

.details > .thumbnail {
  max-width: 300px;
}
.details > .detail {
  margin-top: 4px;
}

.keep-newlines {
  white-space: pre-line;
}

.file-link {
  margin-bottom: 8px;
}

.pagination {
  margin: 8px;
  text-align: center;
}
.pagination > a {
  margin: 8px;
}

.hidden {
  visibility: hidden;
}

